# twincli

./: LICENSE.md  pyproject.toml  readme.md
tools/: shell.py
twincli/: __main__.py  config.py  display.py  function_registry.py  repl.py  system_instruction.md
twincli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
twincli/config/: key_facts.json
twincli/tools/: __init__.py  analysis_output.py  browser.py  context_compression.py  delete_directory.py  delete_file.py  enhanced_git_command.py  enhanced_search.py  execute_git_command.py  explain_git_action.py  filesystem.py  memory_journal.py  obsidian.py  obsidian_kanban.py  obsidian_structure.py  read_gmail_inbox.py  research_orchestrator.py  research_person_for_podcast.py  search.py  send_gmail.py  shell.py  smart_commit_message.py  smart_path_finder.py  task_planner.py  tooltool.py
twincli/utils/: config_loader.py
